--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 :root {
     --mainTransition: all 0.3s linear;
     --mainColor: #22d3ee;
@@ -9,6 +10,8 @@
     box-sizing: border-box;
 }
 
+
+
 body {
     background-image: url("./images/hero_background.png");
     background-repeat: no-repeat;
@@ -16,19 +19,19 @@ body {
     background-size: cover;
     color: var(--mainColor);
     position: relative;
+    font-family: 'Special Elite', cursive;
     
 }
-
+/*   styling the navbar -------------------------*/
 .navbar {
     width: 100%;
-    height: 8vh;
+    height: 12vh;
     min-height: 5vh;
     position: sticky;
-    top: 0px; 
+    top: 0px;
     background: transparent;
     border-bottom: 0px solid var(--mainColor);
     background-image: url(./images/products_background.jpg);
-    opacity: 0.7;
     
 }
 .navbar_container {
@@ -41,12 +44,9 @@ body {
     justify-content: space-between;
     align-items: center;
     max-width: 90%;
-    
 }
 
-.navbar_container div {
-    background-color: ;
-}
+
 
 /* ham here */
 
@@ -63,6 +63,11 @@ body {
     cursor: pointer;
 }
 
+.cart_btn i:hover {
+    color: #206774;
+    transform: scale(1.1);
+}
+
 i {
     color: var(--mainColor);
     font-size: 35px;
@@ -70,14 +75,17 @@ i {
 
 .total_items {
     position: relative;
-    top: 16px;
+    top: 2px;
     right: -2px;
-    background-color: var(--mainColor);
+    background-color: transparent;
     padding: 1px 5px;
     border-radius: 20% 20%;
     font-weight: bold;
     font-size: 1.1rem;
     color: white;
+}
+.total_container{
+    text-align: center;
 }
 
 .logo_container {
@@ -85,47 +93,53 @@ i {
     font-size: 40px;
     letter-spacing: 1.5rem;
     color: var(--mainColor);
-    
+    display: flex;
+    justify-content: center;
 }
 
+.logo {
+    text-align: center;
+}
+/*   End of the navbar -------------------------*/
+/*   Hero Section -------------------------*/
 .hero_section {
-
     width: 100%;
     height: 92vh;
     display: flex;
+    transition: all 0.5s ease-in-out;
+    
+}
 
+.hidden {
+    transform: scaleY(0);
+    
+   
 }
 
 .banner {
-
     width: 90%;
     height: 90%;
     border: 2px solid var(--mainColor);
-    background-color: #22d3ee31;
-    
+    background-image: url(./images/products_background.jpg);
+    opacity: 0.7;
     border-radius: 10px 10px;
     margin: auto;
     align-self: center;
     display: flex;
     justify-content: center;
     align-items: center;
-   
 }
 
 .banner_btn {
-
     border: 2px solid var(--mainColor);
     padding: 10px 15px;
     font-size: 35px;
     font-weight: bolder;
     cursor: pointer;
     transition: var(--mainTransition);
-    
-
-
 }
-.banner_btn:hover{
 
+.banner_btn:hover {
     background-color: #22d3ee;
     color: white;
     border: 2px solid white;
@@ -133,50 +147,342 @@ i {
 }
 
 .image_container img {
-
     width: 260px;
     height: 300px;
-    
+    z-index: 1;
+    pointer-events: none;
+    transition: var(--mainTransition);
 }
 
+/*   products Section -------------------------*/
 .products {
-
-    
     display: flex;
     flex-direction: column;
     justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    
+    height: 100%;
     margin: auto;
 }
 
-
-
 .products_container {
-
-    width: 100%;
+    width: 75%;
+    height: 80%;
     padding-bottom: 20px;
     margin: auto;
-     display: grid;
-     grid-template-columns: repeat(auto-fit, minmax(260px , 1fr));
-     grid-column-gap: 1rem;
-     grid-row-gap: 1rem;
-     
-     
-     
-     
- }
+    margin-top: 90px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-column-gap: 2.5rem;
+    grid-row-gap: 1.5rem;
+}
+.collection_container{
+    width: 80%;
+    height: 40vh;
+    background-color: transparent;
+    border-bottom: 2px solid var(--mainColor);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.collection{
+    color: var(--mainColor);
+    font-size: 50px;
+    text-align: center;
+}
+
+.section_title {
+    height: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
 
 .section_title h2 {
-
-    margin: 60px 0px ;
     font-size: 55px;
     letter-spacing: 0.2em;
 }
 
-.product{
+.product {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    
+}
+.product_name{
+    margin-top: 15px;
+    text-align: center;
+}
+.product_price{
+    
+    font-size: 20px;
+}
 
+.buy_btn {
+    border: 2px solid var(--mainColor);
+    border-radius: 5px 5px;
+    padding: 5px;
+    width: 80%;
+    cursor: pointer;
+    position: absolute;
+    top: 80%;
+    transform: translateX(150%);
+    transition: var(--mainTransition);
+    
+}
+
+.buy_btn:hover {
+    background-color: #206774;
+}
+
+.buy_btn i {
+    margin-left: 15px;
+}
+.buy_btn:hover i {
+    color: white;
+}
+
+.image_container {
+    position: relative;
+    overflow: hidden;
+    transition: var(--mainTransition);
+    border: 2px solid var(--mainColor);
+    border-radius: 10px 10px;
+    box-shadow: 3px 3px 5px black;
+    z-index: 3;
+}
+.image_container:hover .buy_btn {
+    transform: translateX(50%);
+}
+
+
+.btn_disabled {
+    pointer-events: none;
+    background-color: #3a814a;
+    transform: translateX(90%);
+}
+
+.cart_overlay {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 30%;
+    
+    
+    background-color: #386066;
+    display: flex;
+    flex-direction: column;
+    transform: scaleX(0);
+    transition: var(--mainTransition);
+    z-index: 5;
+    justify-content: space-around;
+}
+
+.cart_item_image img {
+    width: 100px;
+    height: 100px;
+    
+}
+.close_cart_btn {
+    width: 40px;
+}
+
+.close_cart_btn i {
+    margin: 15px 25px;
+    padding: 5px 8px;
+    border-radius: 50% 50%;
+    border: 1px solid var(--mainColor);
+    cursor: pointer;
+}
+
+.close_cart_btn i:hover {
+    background-color: rgb(219, 86, 86);
+}
+
+.cart_item {
+    width: 90%;
     margin: auto;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 20px;
+    border: 1px solid var(--mainColor);
+    padding: 10px 10px;
+}
+
+.cart_header {
+    align-self: center;
+    border: 1px solid var(--mainColor);
+    border-radius: 4px 4px;
+    padding: 15px 40px;
+    margin-bottom: 40px;
+    letter-spacing: 0.2rem;
+    font-weight: 200;
+    font-size: 24px;
+}
+
+.cart_item_info {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 8px;
+    margin-left: 20px;
+    flex-grow: 2;
+}
+
+.cart_item_amount {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.amount {
+    font-size: 25px;
+    margin: 10px 0px;
+    
+}
+
+.cart_item_amount i {
+    font-size: 20px;
+    cursor: pointer;
+    border: 1px solid var(--mainColor);
+    padding: 2px 3px;
+}
+.cart_item_amount i:hover {
+    background-color: #70959b88;
+}
+
+.remove_item {
+    color: rgb(219, 86, 86);
+    text-decoration: underline;
+    cursor: pointer;
+}
+.remove_item:hover {
+    color: rgb(219, 86, 86);
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.total_section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 150px;
+    margin: 30px 0px;
+    font-size: 30px;
+    letter-spacing: 0.2rem;
+}
+
+.invisible{
+    visibility: hidden;  
+    display: none;
+    
+}
+.clear_cart_btn{
+    min-width: 220px;
+    min-height: 50px;
+    color: rgb(219, 86, 86);
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid rgb(219, 86, 86);
+    font-size: 30px;
+    cursor: pointer;
+    letter-spacing: 0.3rem;
+    padding: 4px 10px;
+}
+.clear_cart_btn:hover{
+    background-color:rgb(219, 86, 86); 
+    border: 2px solid var(--mainColor);
+    color: var(--mainColor);
+}
+.footer {
+
+    width: 100%;
+    
+    background-color: transparent;
+    margin-top: 50px;
+    
+}
+
+.icons_container{
+
+    
+    
+   
+    margin: auto;
+    margin-bottom: 100px;
+    min-height: 65%;
+   background-color: transparent;
+    display: flex;
+    
+    justify-content: space-around;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    flex-wrap: wrap;
+    
+}
+
+.icon{
+    width: 250px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.icon i {
+    font-size: 150px;
+    margin: 30px;
+}
+
+.icon p {
+    max-width: 180px;
+    overflow-wrap: break-word;
+    font-size: 20px;
+    letter-spacing: 0.2rem;
+    line-height: 1.5rem;
+}
+
+.contact_container {
+    width: 92%;
+    margin: auto;
+    min-height: 35%;
+    background-image: url(./images/products_background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    justify-content: space-evenly;
+    align-items: center;
+    
+}
+.contact_container p {
+    transition: var(--mainTransition);
+}
+
+.contact_container div {
+    width: 200px;
+    height: 200px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -184,41 +490,119 @@ i {
     gap: 5px;
 }
 
-.buy_btn {
+.copy{
+    width: 100%;
+    height: 10%;
+    background-image: url(./images/hero_background.png);
+   background-position-x: left;
+   display: flex;
+   justify-content: center;
+   justify-content: space-between;
+   align-items: center;
+   font-size: 20px;
 
-  
-    border: 2px solid var(--mainColor);
-    border-radius: 5px 5px;
-    padding: 5px;
-    width: 80%;
+    
+}
+.copy p {
+    margin: 5px 40px;
+}
+.contact_container p:hover {
+    text-decoration: underline;
     cursor: pointer;
-    position: absolute;
-    top: 50%;
-    transform: translateX(100%);
-    transition: var(--mainTransition);
-
+    color: #3a814a;
+}
+.contact_container h3{
+    text-decoration: underline;
+    text-underline-offset: 5px;
+}
+.symbol{
+    font-size: 35px;
+    color: red;
 }
 
-.buy_btn:hover{
+.social div {
 
-    background-color: #2daabdad;
-
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 2px;
     
 }
-
-.buy_btn i {
-
-    margin-left: 15px;
-    
-}
-.image_container{
-
-    position: relative;
-    overflow: hidden;
+.social div i {
+    cursor: pointer;
     transition: var(--mainTransition);
-    border: 2px solid var(--mainColor);
-    border-radius: 10px 10px;
-    box-shadow: 3px 3px 5px black;
+}
+.social div i:hover {
+    color: #3a814a;
+}
+.owner{
+    color: red;
+    font-weight: bolder;
 }
 
 
+@media (min-width: 700px) and (max-width:1018px) {
+  
+    
+    .cart_overlay {
+        width: 80%;
+    }
+    .icons_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 100px;
+        align-items: center;
+    }
+  
+  }
+
+  @media (min-width: 320px) and (max-width:699px) {
+  
+    
+    .cart_overlay {
+        width: 80%;
+    }
+    .icons_container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 150px;
+        align-items: center;
+    }
+    .icon i {
+        font-size: 120px;
+        margin: 30px;
+    }
+
+    .copy{
+        margin-top: 15px;
+        font-size: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        justify-content: space-evenly;
+        align-items: center;
+        text-align: center;
+    }
+
+    .contact_container{
+        display: flex;
+        flex-direction: column;
+    }
+    .contact_container div {
+        height: 170px;
+        margin-bottom: 30px;
+    }
+    .social div {
+
+        align-items: flex-start;
+    }
+    .logo_container{
+        font-size: 28px;
+        letter-spacing: 0.5rem;
+    }
+  }  
